# BoostDI

./: CMakeLists.txt  main.cpp
bindings/: app_config.cpp  app_config.h  controller_config.cpp  controller_config.h  named_types.h
interfaces/: base_interfaces.hpp
inventory/: app.cpp  app.h  controller.cpp  controller.h  gui_view.cpp  gui_view.h  model.cpp  model.h  renderer.cpp  renderer.h  text_view.cpp  text_view.h  user.cpp  user.h
